Fix for menu appearing behind sign-in/up modal (#55).

--- a/client/src/app/nav/nav.component.scss
+++ b/client/src/app/nav/nav.component.scss
@@ -66,7 +66,7 @@ nav {
 
     display: flex;
     position: relative;
-    z-index: 25;
+    z-index: 20;
     min-width: 50px;
 
     justify-content: space-between;
@@ -77,8 +77,6 @@ nav {
       @include translate(0, .75rem);
 
       cursor: pointer;
-
-      // padding-top: 4%;
 
       @include phones {
         padding-top: 9%;
