--- a/client/src/style/global.scss
+++ b/client/src/style/global.scss
@@ -180,7 +180,7 @@ form {
   justify-content: center;
   align-items: center;
 
-  z-index: 25;
+  z-index: 30;
   top: 0;
   left: 0;
   width: 100%;
